[package]
name = "terminal-calculator"
version = "0.1.0"
edition = "2025"
authors = [Satyrpan admpaulo94@gmail.com]
description = " Uma calculadora de terminal simples em Rust
License = "MIT"
readme = "readme.md"

[dependences]
chrono = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_Json = "1.0

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
